# ctx-card

./: .gitignore  CTXCARD.ctx  CTXCARD.json  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/workflows/: test.yml
Syntax-Highlighter/: CTX-DICTIONARY.md  README.md  TODO  install-test.sh  language-configuration.json  package.json
Syntax-Highlighter/ctx-vsix-file/: ctx-card-syntax-1.0.0.vsix
Syntax-Highlighter/snippets/: sample.ctx  test.ctx
Syntax-Highlighter/syntaxes/: ctx.tmLanguage.json
docs/: CTX-ARCHITECTURE.md  CTX-IDEOLOGY.md  CTX-PURPOSE.md  CTXIGNORE.md  FIXES.md  INDEX.md  PROJECT-STRUCTURE.md  PROJECT_STRUCTURE.md  SYNTAX-HIGHLIGHTER.md
docs/Legacy-Versions/: CTX-1.md  CTX-2.md  CTX-3.md  CTX-4.md  CTX-5.md  CTX-6.md  CTX-7.md  ctx-ideology-legacy.md
docs/Legacy-Versions/python_draft/: ctx_five.py  ctx_four.py  ctx_one.py  ctx_seven.py  ctx_six.py  ctx_three.py  ctx_two.py
docs/Syntax-Highlighter/: CTX-VSC-LANG.md  IMPLEMENTATION_SUMMARY.md  README.md  comprehensive-test.ctx  debug-extension.sh  install-test.sh  language-configuration.json  package.json
docs/Syntax-Highlighter/extension-dev/: extension.js  package.json  test.ctx
docs/Syntax-Highlighter/extension-dev/syntaxes/: ctx.tmLanguage.json
docs/Syntax-Highlighter/minimal-test/: install-minimal.sh  package.json
docs/Syntax-Highlighter/snippets/: ctx.json
src/: ctxcard_gen.py
src/ctxcard_gen/: __init__.py  __main__.py  ctxcard_gen.py  exceptions.py  types.py
src/ctxcard_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ctxcard_gen/core/: __init__.py  ast_analyzer.py  call_resolver.py  card_renderer.py  scanner.py
src/ctxcard_gen/utils/: __init__.py  export.py  helpers.py  ignore.py  validation.py
tests/: README.md  __init__.py  conftest.py  test_ast_analyzer.py
tests/cli/: test_cli.py
tests/integration/: test_full_generation.py
tests/unit/: test_call_resolver.py  test_card_renderer.py  test_export.py  test_ignore.py  test_scanner.py  test_utils.py  test_validation.py
